# rust_on_android_example

./: Cargo.toml  DisposableTestingKeys.jks  build.sh  passwords-keystore.txt
src/: lib.rs
